<resources>
    <string name="app_name">BookSalonAppointment</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No Account? Sign Up</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="existing_user">Already have a account? Sign In</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="entername">Name</string>
    <string name="salon_img">Salon Img</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="skip">Skip?</string>
    <string name="notification">Notification</string>
    <string name="BookAppointment">Book Salon Appointment</string>
    <string name="ourservices">Our Services</string>
    <string name="offers">Offers</string>
    <string name="Homecareproducts">Home Care Tips</string>
    <string name="Howtoreach">How to reach?</string>
    <string name="workinghours">Working Hours</string>
    <string name="userrating">User Rating</string>
    <string name="Community">Community</string>
    <string name="About">About</string>
    <string name="logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="developed_by">Developed By</string>
    <string name="email">sindhura@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="contactno">xxx-xxx-xxxx</string>
    <string name="title_activity_service_provided">ServiceProvided</string>
    <string name="title_activity_user_rating">UserRating</string>
    <string name="back">Back</string>
    <string name="services">Services</string>
    <string name="haircuts">Haircuts</string>
    <string name="service_img">image</string>
    <string name="barbername">Barber Name</string>
    <string name="share">Share</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="ok">Ok</string>
    <string name="permission_approved">Permission Approved</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="setting">Settings</string>
    <string name="get_current_location">GET CURRENT LOCATION</string>
    <string name="fine_location_permission">Please allow fine location permission</string>
    <string name="pl_title">title</string>
    <string name="pl_duration">15</string>
    <string name="pl_price">30</string>
    <string name="pl_minutes">: minutes</string>
    <string name="pl_rs">Rs.</string>
    <string name="select_service">Select Services</string>
    <string name="service_name">Service Name</string>
    <string name="close">Close</string>
    <string name="_45_min">45 Min</string>
    <string name="_100">100</string>
    <string name="change_barber">CHANGE BARBER</string>
    <string name="continueText">CONTINUE</string>
    <string name="cancel">Cancel</string>
    <string name="_9_00_am">9:00 AM</string>
    <string name="developed_by_sin">Sindhura Ramesh</string>
    <string name="aboutus">About Us</string>
    <string name="day">Sunday</string>
    <string name="date">01 Aug</string>
    <string name="clickfortime">Select Appointmment Time</string>
    <string name="selecttime">Select Time</string>
    <string name="selectedtime">Selected time is:</string>
    <string name="ID">id</string>
    <string name="customer">Sindhura</string>
    <string name="workinghrs">Working hours</string>
    <string name="selected_time">Select Time</string>
    <string name="select_time">Select Time</string>
    <string name="n_a">N/A</string>
    <string name="summary">Summary</string>
    <string name="ex_date">Sat 01 Jan, 2022</string>
    <string name="ex_time">9:00Am</string>
    <string name="ex_duration">15min</string>
    <string name="ex_cost">Total Cost : $30</string>
    <string name="barber">Barber</string>
    <string name="pl_barber_name">Barber Name</string>
    <string name="Book">Book</string>
    <string name="service_id">Service ID</string>
    <string name="barber_name">Barber Name</string>
    <string name="barber_id">Barber ID</string>
    <string name="selecteddate">Selected Date</string>
    <string name="service_name1">Service Name:</string>
    <string name="service_id1">Service ID:</string>
    <string name="barber_name1">Barber Name:</string>
    <string name="barber_id1">Barber ID:</string>
    <string name="selecteddate1">Selected Date:</string>
    <string name="selectedtime1">Selected Time:</string>
    <string name="sunday">Sunday</string>
    <string name="closed">Closed</string>
    <string name="monday">Monday</string>
    <string name="business_hours_time">9cam-5 pm</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="business_hours_time_sat">9 am - 2 pm</string>
    <string name="open_caps">Open</string>
    <string name="closed_caps">CLOSED</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
</resources>