<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bookappointment"
            android:icon="@drawable/ic_baseline_date_range_24"
            android:title="@string/BookAppointment"
            app:showAsAction="always"/>

        <item
            android:id="@+id/nav_ourservices"
            android:title="@string/ourservices"/>

        <item
            android:id="@+id/nav_offers"
            android:title="@string/offers"/>
        <item
            android:id="@+id/nav_homecaretips"
            android:title="@string/Homecareproducts"/>

        <item
            android:id="@+id/nav_howtoreach"
            android:title="@string/Howtoreach"/>

        <item
            android:id="@+id/nav_workinghours"
            android:title="@string/workinghours"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"/>


    </group>
    <item android:title="@string/Community">

        <menu>

            <item
                android:id="@+id/nav_userrating"
                android:title="@string/userrating"/>

            <item
                android:id="@+id/nav_About"
                android:title="@string/About"/>


        </menu>
    </item>

</menu>