<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="30sp"
        android:background="@color/Blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:contentDescription="@string/salon_img"
        android:id="@+id/salonImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/BarberSlashScreen"
        android:layout_marginTop="30dp"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/entername"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salonImg"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtMobile"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edtMobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtconfirmPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmpassword"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/edtconfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_user"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>