<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    android:paddingBottom="1dp"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="@color/grey"
        android:padding="8dp">


        <TextView
            android:id="@+id/tv_service_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/service_name1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/service_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:textColor="@color/black"
           app:layout_constraintStart_toEndOf="@+id/tv_service_name1"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_service_id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/service_id1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_name" />
        <TextView
            android:id="@+id/tv_service_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/service_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tv_service_id1"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_name" />

        <TextView
            android:id="@+id/tv_barber_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/barber_name1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_id" />

        <TextView
            android:id="@+id/tv_barber_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/barber_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tv_barber_name1"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_id" />
        <TextView
            android:id="@+id/tv_barber_id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/barber_id1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_barber_name" />



        <TextView
            android:id="@+id/tv_barber_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="@color/white"
            android:text="@string/barber_id"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tv_barber_id1"
            app:layout_constraintTop_toBottomOf="@+id/tv_barber_name" />
        <TextView
            android:id="@+id/tv_date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="10dp"
            android:text="@string/selecteddate1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_barber_id" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="10dp"
            android:text="@string/selecteddate"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_date1"
            app:layout_constraintTop_toBottomOf="@+id/tv_barber_id" />

        <TextView
            android:id="@+id/tv_time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/selectedtime1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/selectedtime"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_time1"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>